--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Records\Values\ValueDate.cs" />
     <Compile Include="Records\Values\ValueInteger.cs" />
     <Compile Include="Records\Values\ValueText.cs" />
-    <Compile Include="SearchEngine\Conditions\Condition.cs" />
+    <Compile Include="SearchEngine\Conditions\ConditionRule.cs" />
     <Compile Include="SearchEngine\Conditions\ConditionContains.cs" />
     <Compile Include="SearchEngine\Conditions\ConditionEqual.cs" />
     <Compile Include="SearchEngine\Conditions\ConditionLess.cs" />
