--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -85,9 +85,13 @@
     <Compile Include="Misc\BindableDynamicDictionary.cs" />
     <Compile Include="Misc\SimpleExpressionHolder.cs" />
     <Compile Include="Records\Description\RecordDescriptionDate.cs" />
+    <Compile Include="Records\Description\RecordDescriptionEnum.cs" />
     <Compile Include="Records\Description\RecordDescriptionInt.cs" />
     <Compile Include="Records\InputControl\InputControlDate.xaml.cs">
       <DependentUpon>InputControlDate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Records\InputControl\InputControlEnum.xaml.cs">
+      <DependentUpon>InputControlEnum.xaml</DependentUpon>
     </Compile>
     <Compile Include="Records\InputControl\InputControlInt.xaml.cs">
       <DependentUpon>InputControlInt.xaml</DependentUpon>
@@ -178,6 +182,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Records\InputControl\InputControlDate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Records\InputControl\InputControlEnum.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
